--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "require": {
         "php"                   : ">=5.3.3",
-        "alchemy/binary-driver" : "~1.5"
+        "php-ffmpeg/binary-driver": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit"       : "~3.7",
