--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     },
     "repositories": [
         {
-            "type": "git",
+            "type": "vcs",
             "url": "https://github.com/PHP-FFMpeg/BinaryDriver.git"
         }
     ]
